# MyWork

./: README.md
LogisticRegression_new/: CMakeLists.txt  LogRHelper.h  ObjectFunction.cpp  ObjectFunction.h  PALLREnetRegularizer_new.cpp  PALLREnetRegularizer_new.h  PALLogisticRegression_fix.cpp  PALLogisticRegression_fix.h
LogisticRegression_new/CrossValidation/: DataLoader.cpp  DataLoader.h  DataStruct.cpp  DataStruct.h  Model.cpp  Model.h  ModelEvaluator.cpp  ModelEvaluator.h  ModelTrainer.cpp  ModelTrainer.h
